--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,9 @@
 .container{
-  
-   position: relative;
-   
-  
+    width: 1080px;
+   position: wrap;
+   margin-right: 125px;
     text-align: center;
+
 }
 row{
     float: none;
